--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "y",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./api/index.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon ./api/index.js"
   },
   "author": "",
   "license": "ISC",
